fixed div layout issues

--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -1,10 +1,19 @@
-body { background-color: #fff; color: #333; }
+body {
+    background-color: #fff; color: #333;
+    font-family: verdana, arial, helvetica, sans-serif;
+    font-size:   12px;
+    line-height: 14px;
+    width: 1000px;
+}
 
-body, p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size:   12px;
-  line-height: 14px;
-  width: 1000px;
+body, div, p, ol, ul, td {
+    margin: 0;
+    padding: 0;
+}
+
+h1, h2{
+    margin: 0;
+    padding: .5em;
 }
 
 table {
@@ -45,10 +54,11 @@ label input {
     width: 100%;
     height: 2em;
     background-color: #e0ffff;
+    padding: .5em;
+    margin-bottom: .5em;
 }
 
 #topNav ul {
-    display: inline;
     list-style-type: none;
 }
 
@@ -58,9 +68,12 @@ label input {
 }
 
 #leftNav {
-    width: 20em;
+    width: 10em;
+    padding: .5em;
+    margin-right: 1em;
     background-color: #e0ffff;
-    display: inline-block;
+    float: left;
+    height: 200px;
 }
 
 #leftNav ul {
@@ -68,13 +81,11 @@ label input {
 }
 
 #leftNav ul li {
+    margin: 1em;
 }
 
 #content {
-    margin-top: 3em;
-    display: inline-block;
-    width: 50em;
-    background-color: red;
+
 }
 
 pre {
@@ -121,4 +132,3 @@ a:hover { color: #fff; background-color:#000; }
   font-size: 12px;
   list-style: square;
 }
-
